Revision history for Task-BeLike-DAGOLDEN

{{$NEXT}}

0.009     2014-01-12 09:57:06-05:00 America/New_York

    - remove Data::Dump::Streamer -- it is not well supported and
      keeps failing tests

0.008     2013-08-20 18:08:13 America/New_York

    - add IO::Prompt::Tiny

0.007     2013-06-11 14:41:52 America/New_York

    - require HTTP::Tiny 0.028 for good SSL/cookie-jar support

    - add Dist::Zooky for converting old dists to dzil

    - remove App::cpanminus to avoid interfering with perlbrew one

0.006     2013-03-13 22:44:47 America/New_York

    - superclass, TAP::Harness::Restricted

    - remove Pantry

0.005     2013-03-13 05:56:12 America/New_York

    - Unicode::UTF8, Test::Roo, Test::FailWarnings, HTTP::CookieJar,
      Mozilla::CA, autodie, Net::GitHub, Acme::require::case,
      Benchmark::Forking and Dumbbench

0.004     2013-01-31 11:25:14 America/New_York

    - create a Moose section

    - add Path::Tiny

0.003     2013-01-24 17:25:49 America/New_York
    - a few more modules

0.002     2012-03-30 13:37:22 Europe/Paris
    - many more modules

0.001     2011-10-21 13:22:00 America/New_York
    - Initial release
